fix language in store description

--- a/Resources/store/de.html
+++ b/Resources/store/de.html
@@ -5,17 +5,17 @@
 <h2>Features</h2>
 <p>
     <ul>
-        <li>Calculates size and count of every item within folder, not just files</li>
+        <li>Berechnet die Größe und Anzahl jedes Elements in einem Ordner, nicht nur von Dateien</li>
         <li>
-            Significant speed up clearing cache directories
+            Deutlich schnelleres Löschen von Cache-Verzeichnissen
             <ul>
-                <li>f.e. 160 MB (13000 files) in 0.3 secs instead of 7 secs</li>
+                <li>z.B. 160 MB (13000 Elemente) in 0,3 statt 7 Sekunden</li>
             </ul>
         </li>
         <li>
-            Significant speed up calculating size and file-count of caching directories
+            Erhebliche Beschleunigung beim Berechnen der Größe und der Anzahl der Dateien in Cache-Verzeichnissen
             <ul>
-                <li>f.e. 1 GB (62000 files) in 0.6 secs instead of 26 secs</li>
+                <li>z.B. 1 GB (62000 Elemente) in 0,6 statt 26 Sekunden</li>
             </ul>
         </li>
 
