--- a/Resources/store/en.html
+++ b/Resources/store/en.html
@@ -5,17 +5,17 @@
 <h2>Features</h2>
 <p>
     <ul>
-        <li>Berechnet die Größe und Anzahl jedes Elements in einem Ordner, nicht nur von Dateien</li>
+        <li>Calculates size and count of every item within folder, not just files</li>
         <li>
-            Deutlich schnelleres Löschen von Cache-Verzeichnissen
+            Significant speed up clearing cache directories
             <ul>
-                <li>z.B. 160 MB (13000 Elemente) in 0,3 statt 7 Sekunden</li>
+                <li>f.e. 160 MB (13000 files) in 0.3 secs instead of 7 secs</li>
             </ul>
         </li>
         <li>
-            Erhebliche Beschleunigung beim Berechnen der Größe und der Anzahl der Dateien in Cache-Verzeichnissen
+            Significant speed up calculating size and file-count of caching directories
             <ul>
-                <li>z.B. 1 GB (62000 Elemente) in 0,6 statt 26 Sekunden</li>
+                <li>f.e. 1 GB (62000 files) in 0.6 secs instead of 26 secs</li>
             </ul>
         </li>
 
